Fix skip link visibility - hide completely when not focused

--- a/src/static/css/fullscreen.css
+++ b/src/static/css/fullscreen.css
@@ -189,7 +189,7 @@
 /* Accessibility: Skip link */
 .skip-link {
   position: absolute;
-  top: -40px;
+  top: -100%;
   left: 0;
   background: #000;
   color: #fff;
@@ -197,10 +197,13 @@
   text-decoration: none;
   z-index: 100;
   transition: top 0.2s;
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
 }
 
 .skip-link:focus {
   top: 0;
+  clip: auto;
 }
 
 /* Screen reader only */
